sm/sm-my-community/main/default/objects/SM_Community_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>CommercePaymentSalesEndpoint__c</fullName>
        <defaultValue>&quot;/services/data/v55.0/commerce/payments/sales&quot;</defaultValue>
        <label>Commerce Payment Sales Endpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommercePaymentMethodEndpoint__c</fullName>
        <defaultValue>&quot;/services/data/v55.0/commerce/payments/payment-methods&quot;</defaultValue>
        <label>Commerce Payment Method Endpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommerceBillingPaymentEndpoint__c</fullName>
        <defaultValue>&quot;/services/data/v55.0/commerce/billing/payments/&quot;</defaultValue>
        <label>Commerce Billing Payment Endpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BuyNowExistingOrderEndpoint__c</fullName>
        <defaultValue>&quot;/services/data/v55.0/actions/custom/flow/Buy_Now_Pilot_Existing_Order&quot;</defaultValue>
        <label>Buy Now Existing Order Endpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalculatePriceEndpoint__c</fullName>
        <defaultValue>&quot;/services/data/v55.0/commerce/pricing/salestransaction/actions/calculate-price&quot;</defaultValue>
        <label>Calculate Price Endpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NamedCredential__c</fullName>
        <label>Named Credential</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SM Community Setting</label>
    <pluralLabel>SM Community Settings</pluralLabel>
</CustomObject>